Slim profile route data by default
